--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-<title> Welcome to my site </title>
-<h1> This is my site </h1>
+<title> Hello world! </title>
+<h1> Testing my first webpage</h1>
+<h2> Working.. </h2>
